# api-gateway/docs/swagger.yaml
@@ -305,6 +305,9 @@ definitions:
     properties:
       description:
         type: string
+      dividend_mode:
+        description: payout|reinvest; "" defaults to payout (SP4)
+        type: string
       minimum_contribution_rsd:
         type: string
       name:
@@ -1022,6 +1025,9 @@ definitions:
       active:
         type: boolean
       description:
+        type: string
+      dividend_mode:
+        description: payout|reinvest (SP4)
         type: string
       minimum_contribution_rsd:
         type: string
